@@ -1,3 +1,7 @@
+2007-12-17  Mark Ellis  <mark@mpellis.org.uk>
+
+	* more registry fixes in rapi1
+	
 2007-12-13  Mark Ellis  <mark@mpellis.org.uk>
 
 	* fixes to rapi_buffer_debug_ header
